--- a/templates/board.html
+++ b/templates/board.html
@@ -31,7 +31,7 @@
       </ul>
     </nav>
 
-    <div class="flex flex-col gap-5 grow items-center justify-center">
+    <div class="flex flex-col gap-5 grow items-center">
       <a href="/board/cards/new" class="bg-blue-500 flex items-center justify-between rounded-xl text-white p-5 shadow-md 
         w-full lg:w-3/4">
         <span class="font-bold text-xl">Cadastrar Nova Sugestão</span>
@@ -41,7 +41,7 @@
             clip-rule="evenodd" />
         </svg>
       </a>
-      <div class="flex-1 gap-5 grid grid-cols-2 place-content-stretch w-full *:flex *:flex-col *:p-5 lg:w-3/4">
+      <div class="gap-5 grid grid-cols-2 place-content-stretch w-full *:flex *:flex-col *:p-5 lg:w-3/4">
         {{ range .Cards }}
         {{ template "board_card" . }}
         {{ end }}
