--- a/templates/board.html
+++ b/templates/board.html
@@ -41,7 +41,7 @@
             clip-rule="evenodd" />
         </svg>
       </a>
-      <div class="gap-5 grid grid-cols-2 place-content-stretch w-full *:flex *:flex-col *:p-5 lg:w-3/4">
+      <div class="gap-5 grid lg:grid-cols-2 place-content-stretch w-full *:flex *:flex-col *:p-5 lg:w-3/4">
         {{ range .Cards }}
         {{ template "board_card" . }}
         {{ end }}
