create card is halfway there

--- a/cmd/api/views/board.html
+++ b/cmd/api/views/board.html
@@ -1,59 +1,18 @@
-<html lang="en">
+{{ define "title" }} - Board{{ end }}
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ .Title }}</title>
-
-  <!-- TailwindCSS -->
-  <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@400;700&display=swap" rel="stylesheet">
-</head>
-
-<body>
-  <div class="bg-slate-50 flex flex-col font-[Fuzzy_Bubbles] min-h-screen p-5">
-    <nav class="mb-7">
-      <a href="/">
-        <h1 class="float-left font-bold text-xl text-blue-500">Voz</h1>
-      </a>
-      <ul class="flex gap-3 justify-center *:font-bold">
-        <li>
-          <a href="/">Início</a>
-        </li>
-        <li class="border-b-2">
-          <a href="/board">Quadro</a>
-        </li>
-      </ul>
-    </nav>
-
-    <div class="flex flex-col gap-5 grow items-center">
-      <a href="/board/cards/new" class="bg-blue-500 flex items-center justify-between rounded-md text-white p-5 shadow-md 
+{{ define "content" }}
+<a href="/board/cards/new" class="bg-blue-500 flex items-center justify-between rounded-md text-white p-5 shadow-md 
         w-full lg:w-3/4">
-        <span class="font-bold text-xl">Cadastrar Nova Sugestão</span>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="size-5">
-          <path fill-rule="evenodd"
-            d="M2 8a.75.75 0 0 1 .75-.75h8.69L8.22 4.03a.75.75 0 0 1 1.06-1.06l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H2.75A.75.75 0 0 1 2 8Z"
-            clip-rule="evenodd" />
-        </svg>
-      </a>
-      <div class="gap-5 grid lg:grid-cols-2 place-content-stretch w-full *:flex *:flex-col *:p-5 lg:w-3/4">
-        {{ range .Cards }}
-        {{ template "card" . }}
-        {{ end }}
-      </div>
-    </div>
-
-    <footer class="mt-7 text-center text-gray-500 text-xs">
-      <span class="inline-block text-right w-full lg:w-3/4">
-        Criado por <a class="text-blue-500" href="https://ed-henrique.com/" target="_blank" referrerpolicy="no-referrer"
-          rel="noreferrer">Eduardo Henrique</a>
-      </span>
-    </footer>
-  </div>
-</body>
-
-</html>
+  <span class="font-bold text-xl">Cadastrar Nova Sugestão</span>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="size-5">
+    <path fill-rule="evenodd"
+      d="M2 8a.75.75 0 0 1 .75-.75h8.69L8.22 4.03a.75.75 0 0 1 1.06-1.06l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H2.75A.75.75 0 0 1 2 8Z"
+      clip-rule="evenodd" />
+  </svg>
+</a>
+<div class="gap-5 grid lg:grid-cols-2 place-content-stretch w-full *:flex *:flex-col *:p-5 lg:w-3/4">
+  {{ range .Cards }}
+  {{ template "card" . }}
+  {{ end }}
+</div>
+{{ end }}
