--- a/cmd/api/views/board.html
+++ b/cmd/api/views/board.html
@@ -3,7 +3,7 @@
 {{ define "content" }}
 <a href="/board/cards/new" class="bg-blue-500 flex items-center justify-between rounded-md text-white p-5 shadow-md 
         w-full lg:w-3/4">
-  <span class="font-bold text-xl">Cadastrar Nova Sugestão</span>
+  <span class="font-bold text-xl">Add New Suggestion</span>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="size-5">
     <path fill-rule="evenodd"
       d="M2 8a.75.75 0 0 1 .75-.75h8.69L8.22 4.03a.75.75 0 0 1 1.06-1.06l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H2.75A.75.75 0 0 1 2 8Z"
@@ -11,7 +11,7 @@
   </svg>
 </a>
 <div class="gap-5 grid lg:grid-cols-2 place-content-stretch w-full *:flex *:flex-col *:p-5 lg:w-3/4">
-  {{ range .Cards }}
+  {{ range . }}
   {{ template "card" . }}
   {{ end }}
 </div>
