--- a/cmd/api/views/board_cards_new.html
+++ b/cmd/api/views/board_cards_new.html
@@ -1,7 +1,7 @@
 {{ define "title" }} - New Suggestion{{ end }}
 {{ define "content" }}
+<h2 class="text-lg text-center italic w-full lg:w-3/4">New Suggestion</h2>
 <div class="bg-blue-500 p-5 rounded-md shadow-md text-white w-full lg:w-3/4">
-  <h2 class="border-b-2 border-white float-right text-lg text-right italic mb-3 pb-1 w-full">New Suggestion</h2>
   <form action="/board/cards/new" method="POST">
     <div class="mb-3">
       <label for="name" class="font-bold mb-1">Name</label>
