--- a/cmd/api/views/components/base_auth.html
+++ b/cmd/api/views/components/base_auth.html
@@ -15,36 +15,12 @@
 </head>
 
 <body>
-  <div class="bg-slate-50 flex flex-col font-[Fuzzy_Bubbles] min-h-screen p-5">
-    <nav class="flex items-center justify-between mb-7 mx-auto w-full lg:w-3/4">
-      <div class="flex items-center *:font-bold">
-        <a href="/" class="mr-7">
-          <h1 class="font-bold text-xl text-blue-500">Voz</h1>
-        </a>
-        <ul class="flex gap-3 *:font-bold">
-          <li>
-            <a href="/">Home</a>
-          </li>
-          <li class="border-b-2">
-            <a href="/board">Board</a>
-          </li>
-        </ul>
-      </div>
-      <ul class="flex gap-3 items-center *:font-bold">
-        <li class="p-2 border-2 border-blue-500 rounded text-blue-500">
-          <a href="/auth/simple/login">Login</a>
-        </li>
-        <li class="bg-blue-500 p-2 rounded text-white">
-          <a href="/auth/simple/signup">Sign Up</a>
-        </li>
-      </ul>
-    </nav>
+  <div class="bg-slate-50 flex flex-col font-[Fuzzy_Bubbles] min-h-screen items-center 
+    justify-center p-5">
+    {{ template "content" . }}
 
-    <div class="flex flex-col gap-5 grow items-center mb-7">
-      {{ template "content" . }}
-    </div>
-
-    <footer class="flex items-center justify-between mx-auto text-gray-500 text-xs w-full lg:w-3/4">
+    <footer class="flex items-center justify-between mt-7 mx-auto text-gray-500 text-xs w-full 
+      md:w-3/4 lg:w-1/3">
       <div class="text-blue-500">
         <a href="https://github.com/ed-henrique/voz/" target="_blank" referrerpolicy="no-referrer" rel="noreferrer">
           <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 
